--- a/client/styles/spicy-theme.scss
+++ b/client/styles/spicy-theme.scss
@@ -5,20 +5,20 @@
 
 // Include the base styles for Angular Material core. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
-@include md-core();
+@include mat-core();
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue.
 
-$candy-app-primary: md-palette($md-deep-orange);
-$candy-app-accent: md-palette($md-green, 500, 300, 700);
+$candy-app-primary: mat-palette($mat-deep-orange);
+$candy-app-accent: mat-palette($mat-green, 500, 300, 700);
 
 // The warn palette is optional (defaults to red).
-$candy-app-warn: md-palette($md-red);
+$candy-app-warn: mat-palette($mat-red);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$candy-app-theme: md-light-theme($candy-app-primary, $candy-app-accent, $candy-app-warn);
+$candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-app-warn);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
